# mathInsightBackend

./: .dockerignore  .env.dev.example  .env.example  .env.prod.example  .gitignore  API_GUIDE.md  API_SPEC.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.prod  PARENT_API_GUIDE.md  PROMPT.md  QUIZ_API_GUIDE.md  RAILWAY_DEPLOYMENT.md  README.md  REPORT.md  db.sqlite3  deploy.bat  deploy.sh  docker-compose.prod.yml  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  railway.toml
assignments/: models.py  urls.py  views.py
assignments/migrations/: 0001_initial.py
mathInsight/: asgi.py  settings.py  urls.py  wsgi.py
quizzes/: admin.py  apps.py  models.py  serializers.py  test_datetime_formats.py  urls.py  views.py
quizzes/migrations/: 0001_initial.py
students/: models.py  serializers.py  urls.py  views.py
students/migrations/: 0001_initial.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_phone_number_user_school_name.py
